CheckIn:Refactor the code by FindBugs.